# Feedlyra

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  README.zh-CN.md  docker-compose.build.yml  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_user_ai_config.py  003_feed_icon_url.py  004_categories.py  005_article_image_url.py  006_article_full_content.py  007_article_summaries.py  008_per_feature_ai_config.py  009_feed_auto_full_text.py  010_article_chat_history_summary.py  011_auto_translate_fields.py  011_conversations_and_references.py  012_conversations_and_references.py  013_automation_rules.py  014_article_initial_fetch.py  015_cross_article_search.py  016_chatmsg_tool_fields.py  017_drop_ai_cross_article_search.py  018_feed_disabled.py  019_article_summary_lang.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  ai.py  article.py  automation.py  base.py  category.py  feed.py  user.py
backend/app/routers/: ai.py  articles.py  auth.py  automation.py  categories.py  feeds.py
backend/app/schemas/: ai.py  article.py  auth.py  automation.py  category.py  feed.py  user.py
backend/tests/: test_agent_loop.py  test_agent_tools.py  test_article_pagination.py  test_article_summary.py  test_automation.py  test_feed_batch.py  test_feed_fetcher_next_check.py  test_feed_worker.py  test_history_filter.py  test_retrieval.py
(+490 files in other folders)
