[project]
name = "feedlyra-backend"
version = "1.0.4"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx[socks]>=0.27.0",
    "python-multipart>=0.0.12",
    "feedparser>=6.0.0",
    "trafilatura>=2.0.0",
    "lxml>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.0",
    "openai>=1.50.0",
    "cryptography>=43.0.0",
    "bcrypt==4.0.1",
    "jieba>=0.42",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
]
